trunk/Archive2/05/c5e97e3521122e/output
main.cpp:16:5: error: stray '\' in program
     std :: cout  <<  "std :: atoi ( \ " "  << cad1 <<  " \ " ) es "  << num1 <<  " \ n " ; 
     ^
main.cpp:17:5: error: stray '\' in program
     std :: cout  <<  "std :: atoi ( \ " "  << cad2 <<  " \ " ) es "  << num2 <<  ' \ n ' ; 
     ^
main.cpp:17:82: error: unknown escape sequence: '\040'
     std :: cout  <<  "std :: atoi ( \ " "  << cad2 <<  " \ " ) es "  << num2 <<  ' \ n ' ; 
                                                                                  ^
main.cpp:17:82: warning: multi-character character constant [-Wmultichar]
main.cpp:18:5: error: stray '\' in program
     std :: cout  <<  "std :: atoi ( \ " "  << str3 <<  " \ " ) es "  << num3 <<  ' \ n ' ; 
     ^
main.cpp:18:82: error: unknown escape sequence: '\040'
     std :: cout  <<  "std :: atoi ( \ " "  << str3 <<  " \ " ) es "  << num3 <<  ' \ n ' ; 
                                                                                  ^
main.cpp:18:82: warning: multi-character character constant [-Wmultichar]
main.cpp:19:5: error: stray '\' in program
     std :: cout  <<  "std :: atoi ( \ " "  << STR4 <<  " \ " ) es "  << num4 <<  " \ n " ; 
     ^
main.cpp: In function 'int principal()':
main.cpp:8:36: error: expected ',' or ';' before 'con'
     const  char  * str3 =  "31337" con palabras ; 
                                    ^
main.cpp:9:12: error: 'de' does not name a type
     const  de char  * Str4 =  "palabras y 2" ;
            ^
main.cpp:12:30: error: 'str2' was not declared in this scope
     int num2 = std :: atoi ( str2 ) ; 
                              ^
main.cpp:14:30: error: 'STR4' was not declared in this scope
     int num4 = std :: atoi ( STR4 ) ;
                              ^
main.cpp:16:60: error: unknown escape sequence: '\040'
     std :: cout  <<  "std :: atoi ( \ " "  << cad1 <<  " \ " ) es "  << num1 <<  " \ n " ; 
                                                            ^
main.cpp:16:82: error: unknown escape sequence: '\040'
     std :: cout  <<  "std :: atoi ( \ " "  << cad1 <<  " \ " ) es "  << num1 <<  " \ n " ; 
                                                                                  ^
main.cpp:17:60: error: unknown escape sequence: '\040'
     std :: cout  <<  "std :: atoi ( \ " "  << cad2 <<  " \ " ) es "  << num2 <<  ' \ n ' ; 
                                                            ^
main.cpp:18:60: error: unknown escape sequence: '\040'
     std :: cout  <<  "std :: atoi ( \ " "  << str3 <<  " \ " ) es "  << num3 <<  ' \ n ' ; 
                                                            ^
main.cpp:19:60: error: unknown escape sequence: '\040'
     std :: cout  <<  "std :: atoi ( \ " "  << STR4 <<  " \ " ) es "  << num4 <<  " \ n " ; 
                                                            ^
main.cpp:19:82: error: unknown escape sequence: '\040'
     std :: cout  <<  "std :: atoi ( \ " "  << STR4 <<  " \ " ) es "  << num4 <<  " \ n " ; 
                                                                                  ^
main.cpp:7:20: warning: unused variable 'cadena2' [-Wunused-variable]
     const  char  * cadena2 =  "3.14159" ; 
                    ^
main.cpp:20:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
