trunk/Archive2/05/c5e97e3521122e/main.cpp
#include <iostream> 
#include <cstdlib>
 
int principal ( ) 
{ 
    const  char  * cadena1 =  "42" ; 
    const  char  * cadena2 =  "3.14159" ; 
    const  char  * str3 =  "31337" con palabras ; 
    const  de char  * Str4 =  "palabras y 2" ;
 
    int num1 = std :: atoi ( cadena1 ) ; 
    int num2 = std :: atoi ( str2 ) ; 
    int num3 = std :: atoi ( str3 ) ; 
    int num4 = std :: atoi ( STR4 ) ;
 
    std :: cout  <<  "std :: atoi ( \ " "  << cad1 <<  " \ " ) es "  << num1 <<  " \ n " ; 
    std :: cout  <<  "std :: atoi ( \ " "  << cad2 <<  " \ " ) es "  << num2 <<  ' \ n ' ; 
    std :: cout  <<  "std :: atoi ( \ " "  << str3 <<  " \ " ) es "  << num3 <<  ' \ n ' ; 
    std :: cout  <<  "std :: atoi ( \ " "  << STR4 <<  " \ " ) es "  << num4 <<  " \ n " ; 
}